--- a/event-details.html
+++ b/event-details.html
@@ -1,47 +1,41 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Journy | Event Details</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Journy - Event Details</title>
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@400;500&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<header class="site-header">
-<div class="container nav">
-<div class="brand">رحلة<span class="brand-sub">Journy</span></div>
-<nav>
-<a href="index.html">Home</a>
-<a href="events.html">Events</a>
-<a href="planner.html">Trip Planner</a>
-<a href="reservations.html">My Reservations</a>
-</nav>
-</div>
+<header>
+  <nav>
+    <div class="logo">Journy</div>
+    <ul class="nav-links">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="events.html">Events</a></li>
+      <li><a href="planner.html">Planner</a></li>
+      <li><a href="reservations.html">Reservations</a></li>
+      <li><a href="login.html">Login</a></li>
+      <li><a href="signup.html">Sign Up</a></li>
+    </ul>
+  </nav>
 </header>
 
-
-<main class="container">
-<div id="event-detail" class="event-detail">
-<!-- populated by JS -->
-</div>
-
-
-<section class="nearby">
-<h2>Nearby Hotels & Restaurants</h2>
-<div id="nearby-list" class="cards">
-<!-- populated by JS -->
-</div>
-</section>
+<main>
+  <section class="event-detail">
+    <h2>Riyadh Music Festival</h2>
+    <img src="https://source.unsplash.com/800x400/?concert,festival" alt="Riyadh Music Festival">
+    <p><strong>Date:</strong> March 15, 2026</p>
+    <p><strong>Location:</strong> Riyadh, Saudi Arabia</p>
+    <p><strong>Description:</strong> Enjoy a full day of live music with world-renowned artists, food stalls, and interactive activities. Perfect for families, tourists, and music lovers!</p>
+    <p><strong>Tickets Available:</strong> 200</p>
+    <button class="btn">Reserve Now</button>
+  </section>
 </main>
 
-
-<footer class="site-footer">
-<div class="container">
-<p>&copy; 2025 Journy</p>
-</div>
+<footer>
+  <p>&copy; 2025 Journy. All rights reserved.</p>
 </footer>
-
-
-<script src="js/main.js"></script>
 </body>
 </html>
