--- a/index.html.html
+++ b/index.html.html
@@ -1,81 +1,63 @@
+<!DOCTYPE html>
 <html lang="en">
-
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Journy | Home</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Journy - Home</title>
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@400;500&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
+<header>
+  <nav>
+    <div class="logo">Journy</div>
+    <ul class="nav-links">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="events.html">Events</a></li>
+      <li><a href="planner.html">Planner</a></li>
+      <li><a href="reservations.html">Reservations</a></li>
+      <li><a href="login.html">Login</a></li>
+      <li><a href="signup.html">Sign Up</a></li>
+    </ul>
+  </nav>
 
-    <header class="site-header">
-    <div class="container nav">
-    <div class="brand">رحلة<span class="brand-sub">Journy</span></div>
-    <nav>
-    <a href="index.html">Home</a>
-    <a href="events.html">Events</a>
-    <a href="planner.html">Trip Planner</a>
-    <a href="reservations.html">My Reservations</a>
-    <a href="login.html" class="btn-outline">Login</a>
-    </nav>
-    </div>
-    </header>
+  <div class="hero">
+    <h1>Discover Amazing Events Across Saudi Arabia</h1>
+    <p>Plan your trips, book tickets, and explore local experiences effortlessly</p>
+    <a href="events.html" class="btn">Explore Events</a>
+  </div>
+</header>
 
-
-    <main>
-
-    <section class="hero">
-    <div class="container hero-grid">
-    <div>
-    <h1>Discover events. Book tickets. Plan your journey.</h1>
-    <p>Integrated event bookings with nearby hotels & restaurants — crafted for Saudi Arabia.</p>
-    <p><a href="events.html" class="btn-primary">Explore Events</a></p>
-    </div>
-    <div class="hero-image">
-    <img src="https://images.unsplash.com/photo-1542314831-068cd1dbfeeb?auto=format&fit=crop&w=800&q=60" alt="Riyadh events">
-    </div>
-    </div>
-    </section>
-
-
-    <section class="featured container">
+<main>
+  <section class="featured-events">
     <h2>Featured Events</h2>
-    <div class="cards" id="featured-cards">
-    <!-- cards populated by js -->
+    <div class="cards">
+      <div class="card">
+        <img src="https://source.unsplash.com/400x250/?concert" alt="">
+        <h3>Riyadh Music Festival</h3>
+        <p>March 15, 2026 | Riyadh</p>
+        <a href="event-details.html" class="btn-small">View Details</a>
+      </div>
+      <div class="card">
+        <img src="https://source.unsplash.com/400x250/?sport" alt="">
+        <h3>Formula 1 Grand Prix</h3>
+        <p>April 2, 2026 | Jeddah</p>
+        <a href="event-details.html" class="btn-small">View Details</a>
+      </div>
+      <div class="card">
+        <img src="https://source.unsplash.com/400x250/?festival" alt="">
+        <h3>Riyadh Season</h3>
+        <p>Dec 5-25, 2025 | Riyadh</p>
+        <a href="event-details.html" class="btn-small">View Details</a>
+      </div>
     </div>
-    </section>
+  </section>
+</main>
 
+<footer>
+  <p>&copy; 2025 Journy. All rights reserved.</p>
+</footer>
 
-    <section class="how container">
-    <h2>How it works</h2>
-    <div class="steps">
-    <div class="step">
-    <h3>Search</h3>
-    <p>Find events by city, date and category.</p>
-    </div>
-    <div class="step">
-    <h3>Book</h3>
-    <p>Reserve tickets and nearby hotels or restaurants in one flow.</p>
-    </div>
-    <div class="step">
-    <h3>Plan</h3>
-    <p>Create a trip with stops and an interactive map.</p>
-    </div>
-    </div>
-    </section>
-
-    </main>
-
-
-    <footer class="site-footer">
-    <div class="container">
-    <p>&copy; 2025 Journy. All rights reserved.</p>
-    <p>Designed by the Journy Team</p>
-    </div>
-    </footer>
-
-
-<script src="js/main.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
