--- a/reservations.html
+++ b/reservations.html
@@ -1,39 +1,49 @@
-<!doctype html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Journy | My Reservations</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Journy - Reservations</title>
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@400;500&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<header class="site-header">
-<div class="container nav">
-<div class="brand">رحلة<span class="brand-sub">Journy</span></div>
-<nav>
-<a href="index.html">Home</a>
-<a href="events.html">Events</a>
-<a href="planner.html">Trip Planner</a>
-<a href="reservations.html">My Reservations</a>
-</nav>
-</div>
+<header>
+  <nav>
+    <div class="logo">Journy</div>
+    <ul class="nav-links">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="events.html">Events</a></li>
+      <li><a href="planner.html">Planner</a></li>
+      <li><a href="reservations.html" class="active">Reservations</a></li>
+      <li><a href="login.html">Login</a></li>
+      <li><a href="signup.html">Sign Up</a></li>
+    </ul>
+  </nav>
 </header>
 
-
-<main class="container">
-<h1>My Reservations</h1>
-<div id="reservations-list">
-<!-- populated by JS -->
-</div>
+<main>
+  <section class="featured-events">
+    <h2>My Reservations</h2>
+    <div class="cards">
+      <div class="card">
+        <h3>Riyadh Music Festival</h3>
+        <p>March 15, 2026 | 2 Tickets</p>
+        <button class="btn-small">View Details</button>
+      </div>
+      <div class="card">
+        <h3>Formula 1 Grand Prix</h3>
+        <p>April 2, 2026 | 3 Tickets</p>
+        <button class="btn-small">View Details</button>
+      </div>
+    </div>
+  </section>
 </main>
 
-
-<footer class="site-footer">
-<div class="container">
-<p>&copy; 2025 Journy</p>
-</div>
+<footer>
+  <p>&copy; 2025 Journy. All rights reserved.</p>
 </footer>
 
-
-<script src="js/main.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
