--- a/planner.html
+++ b/planner.html
@@ -16,6 +16,7 @@
       <li><a href="events.html">Events</a></li>
       <li><a href="planner.html" class="active">Planner</a></li>
       <li><a href="reservations.html">Reservations</a></li>
+      <li><a href="login.html">log out</a></li>
     </ul>
   </nav>
 </header>
