--- a/index.html
+++ b/index.html
@@ -6,17 +6,34 @@
 <title>Journy - Home</title>
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@400;500&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
+
+<style>
+
+.hero {
+  background-image: url('image/header2.jpg'); 
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  padding: 150px 20px; 
+}
+
+.hero h1, .hero p {
+  color: #fff; 
+  text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.7); 
+}
+</style>
 </head>
+
 <body>
 <header>
   <nav>
     <div class="logo">Journy</div>
     <ul class="nav-links">
       <li><a href="index.html">Home</a></li>
-      <li><a href="events.html">Events</a></li>
+      <li><a href="discover.html">Disvover</a></li>
       <li><a href="planner.html">Planner</a></li>
       <li><a href="reservations.html">Reservations</a></li>
-      <li><a href="login.html">log out</a></li>
+      <li><a href="login.html">log in</a></li>
     </ul>
   </nav>
 
@@ -30,25 +47,31 @@
 <main>
   <section class="featured-events">
     <h2>Featured Events</h2>
-    <div class="cards">
-      <div class="card">
-        <img src="https://source.unsplash.com/400x250/?concert" alt="">
-        <h3>Riyadh Music Festival</h3>
-        <p>March 15, 2026 | Riyadh</p>
-        <a href="event-details.html" class="btn-small">View Details</a>
-      </div>
-      <div class="card">
-        <img src="https://source.unsplash.com/400x250/?sport" alt="">
-        <h3>Formula 1 Grand Prix</h3>
-        <p>April 2, 2026 | Jeddah</p>
-        <a href="event-details.html" class="btn-small">View Details</a>
-      </div>
-      <div class="card">
-        <img src="https://source.unsplash.com/400x250/?festival" alt="">
-        <h3>Riyadh Season</h3>
-        <p>Dec 5-25, 2025 | Riyadh</p>
-        <a href="event-details.html" class="btn-small">View Details</a>
-      </div>
+    <div class="cards-row">
+      <div class="card"><img src="image/MDLBEAST.jpg" alt=""><h3>Riyadh Music Festival</h3><p>March 15, 2026 | Riyadh</p><a href="event-details.html" class="btn-small">View Details</a></div>
+      <div class="card"><img src="image/Formula.jpg" alt=""><h3>Formula 1 Grand Prix</h3><p>April 2, 2026 | Jeddah</p><a href="event-details.html" class="btn-small">View Details</a></div>
+      <div class="card"><img src="image/boulevardw.jpg" alt=""><h3>Boulevard World</h3><p>Dec 5-25, 2025 | Riyadh</p><a href="event-details.html" class="btn-small">View Details</a></div>
+      <div class="card"><img src="image/AlUla.png" alt=""><h3>AlUla Culture Week</h3><p>Jan 10, 2026 | AlUla</p><a href="event-details.html" class="btn-small">View Details</a></div>
+    </div>
+  </section>
+
+  <section class="featured-restaurants">
+    <h2>Recommended Restaurants</h2>
+    <div class="cards-row">
+      <div class="card"><img src="image/TheGlobe.jpg" alt=""><h3>The Globe</h3><p>Riyadh</p><a href="#" class="btn-small">View Details</a></div>
+      <div class="card"><img src="image/lazycat.webp" alt=""><h3>Lazy Cat</h3><p>Riyadh</p><a href="#" class="btn-small">View Details</a></div>
+      <div class="card"><img src="image/public.jpg" alt=""><h3>Public</h3><p>Riyadh</p><a href="#" class="btn-small">View Details</a></div>
+      <div class="card"><img src="image/oulu.jpg" alt=""><h3>Oulu</h3><p>Riyadh</p><a href="#" class="btn-small">View Details</a></div>
+    </div>
+  </section>
+
+  <section class="featured-hotels">
+    <h2>Recommended Hotels</h2>
+    <div class="cards-row">
+      <div class="card"><img src="image/ritz.jpg" alt=""><h3>Ritz-Carlton</h3><p>Riyadh</p><a href="#" class="btn-small">View Details</a></div>
+      <div class="card"><img src="image/JeddahBeachResort.jpg" alt=""><h3>Jeddah Beach Resort</h3><p>Jeddah</p><a href="#" class="btn-small">View Details</a></div>
+      <div class="card"><img src="image/AlUlaH.webp" alt=""><h3>AlUla Heritage Suites</h3><p>AlUla</p><a href="#" class="btn-small">View Details</a></div>
+      <div class="card"><img src="image/FourSeasons.webp" alt=""><h3>Four Seasons</h3><p>Riyadh</p><a href="#" class="btn-small">View Details</a></div>
     </div>
   </section>
 </main>
@@ -56,7 +79,5 @@
 <footer>
   <p>&copy; 2025 Journy. All rights reserved.</p>
 </footer>
-
-<script src="script.js"></script>
 </body>
 </html>
